[package]
name = "hackattic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
base64 = "0.21.2"
rayon = "1.7.0"
reqwest = { version = "0.11.18", features = ["json", "cookies"] }
serde = { version = "1.0.181", features = ["derive", "rc"] }
serde_json = "1.0.104"
serde_tuple = "0.5.0"
sha2 = "0.10.7"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
